# Tmux-Orchestrator

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLEANUP_ANALYSIS.md  CLI_CODE_REVIEW_REPORT.md  CLI_SECURITY_BLOCKERS.md  CRITICAL_FIXES_v2.1.6.md  DAEMON_ARCHITECTURE_REVIEW.md  DAEMON_ESCALATION_TEST_REPORT.md  DAEMON_FINDINGS_REPORT.md  DAEMON_FUNCTIONALITY_TEST_REPORT.md  DAEMON_SELF_HEALING_IMPLEMENTATION.md  DAEMON_TEST_PLAN.md  DEVELOPMENT-GUIDE.md  DEVELOPMENT.md  DISABLED_MCP_TESTS_REPORT.md  END_TO_END_QUICKSTART.md  ESCAPE_SEQUENCE_FIX.md  IDLE_DETECTION_IMPROVEMENTS.md  INTEGRATION-COMPLETE.md  MCP_VALIDATION_REPORT.md  MESSAGE_SENDING_FINDINGS.md  MONITORING_FIX_SUMMARY.md  MONITOR_AUTO_SUBMIT_SUCCESS.md  MONITOR_FIX_v2.1.7.md  Makefile  NOTIFICATION_BATCHING_QA_REPORT.md  PERFORMANCE_BASELINE_REPORT.md  PM-QUICKSTART.md  PM_DEV_COORDINATION.md  PM_STATUS.md  PROJECT_CLOSEOUT_ASSESSMENT.md  QUICKSTART.md  README.md  README_NEW.md  REFACTOR_IN_PROGRESS.md  REORGANIZATION_PLAN.md  ROOT_DIRECTORY_CLEANUP_SUMMARY.md  (+65 more)
.claude/: CLAUDE.md  mcp.md  settings.local.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh  tmux.conf
.githooks/: README.md  pre-commit
.test_env_hidden/: pyvenv.cfg
.tmux_orchestrator/: .status.json  README.md  TEST_EXECUTION_REPORT.md  status.json
agent-examples/: README.md  backend-developer.md  code-reviewer.md  database-architect.md  documentation-writer.md  performance-engineer.md  project-manager.md
commands/: agent-status.sh  deploy-agent.sh  force-pm-checkin.sh  handler.sh  idle-monitor-daemon.sh  list-agents.sh  message-pm.sh  open-all-agents.sh  pm-checkin-all.sh  pm-checkin-review.sh  pm-custom-checkin.sh  recover-agents.sh  schedule-checkin.sh  start-idle-monitor.sh  start-orchestrator.sh  stop-idle-monitor.sh  update-vscode-tasks.py  update-vscode-tasks.sh
docs/: CLEANUP_SUMMARY.md  CRITICAL_FALSE_POSITIVE_FIX_IMPLEMENTED.md  HIERARCHICAL_MCP_DEPLOYMENT_GUIDELINES.md  HIERARCHICAL_MCP_DOCUMENTATION_INDEX.md  HIERARCHICAL_TOOLS_USER_GUIDE.md  MCP_AGENT_USAGE_GUIDE.md  MCP_DOCUMENTATION_INDEX.md  MCP_EXAMPLES_AND_ERROR_HANDLING.md  MCP_FOR_AGENTS.md  MCP_SERVER_COMMANDS.md  MCP_TOOL_REFERENCE.md  MIGRATION_GUIDE.md  OUTSTANDING_WORK_TRACKER.md  agent-recovery.md  monitoring-daemon-fix.md  rate-limit-handling.md
examples/: agent-cli-usage.md  cli-setup-team.py  deploy-prd-team.sh  flexible-team-example.md  generated-tasks.json  prd-example.md
experimental_scripts/: test_simplified_restart.py
feedback/: tmux-orchestrator-feedback-v3.md  tmux-orchestrator-feedback-v5.md
planning/: change-detection.md  code-owner-pattern.md  horizontal-scaling-prd.md  prd-cli-mcp-completion.md  prd-fix-daemon-messaging.md  prd-survey.md  rate-limit.md  recovery-issues.md  tasklist.md  (+3 more)
(+1335 files in other folders)
