[tool.poetry]
name = "tmux-orchestrator"
version = "2.0.0"
description = "AI-powered tmux session orchestrator with CLI and MCP server"
authors = ["TMUX Orchestrator Team"]
readme = "README.md"
packages = [{include = "tmux_orchestrator"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
rich = "^13.7.0"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
httpx = "^0.25.2"
pyyaml = "^6.0.1"
watchdog = "^3.0.0"
psutil = "^5.9.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.1"
types-pyyaml = "^6.0.12.20250516"

[tool.poetry.scripts]
tmux-orc = "tmux_orchestrator.cli:cli"
tmux-orc-server = "tmux_orchestrator.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true