[tool.poetry]
name = "tmux-orchestrator"
version = "2.1.16"
description = "AI-powered tmux session orchestrator with CLI and MCP server"
authors = ["TMUX Orchestrator Team"]
readme = "README.md"
packages = [{include = "tmux_orchestrator"}]
include = [
    "tmux_orchestrator/claude_commands/*.md",
    { path = "tmux_orchestrator/data/**/*", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
rich = "^13.7.0"
fastapi = "^0.116.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
httpx = "^0.28.1"
pyyaml = "^6.0.1"
watchdog = "^3.0.0"
psutil = "^5.9.6"
requests = "^2.31.0"
mcp = "^1.12.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
ruff = "^0.1.6"
mypy = "^1.7.1"
types-pyyaml = "^6.0.12.20250516"
types-requests = "^2.31.0"
pre-commit = "^4.2.0"
bandit = "^1.8.6"
isort = "^6.0.1"
invoke = "^2.2.0"

[tool.poetry.scripts]
tmux-orc = "tmux_orchestrator.cli:cli"
tmux-orc-server = "tmux_orchestrator.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "UP035", "UP006"]  # Ignore line too long and typing updates

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.invoke]
# Invoke configuration
echo = true
warn_only = false
